resolved the z-index of nav

--- a/shared/header/headerConLogin.css
+++ b/shared/header/headerConLogin.css
@@ -105,7 +105,7 @@ nav a {
         font-size: small;
         padding-bottom: 10px;
         text-align: center;
-        z-index: 1;
+        z-index: 100;
     }
 
     nav ul li {
